# Hyprmaid

./: .env.example  .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
src/: github.rs  main.rs
src/commands/: color.rs
